# irods_client_nfsrods

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_jar.sh  docker-compose.yml  docker-compose.yml.template  krb5.conf  nfsrods_acls-draw.io.xml  nfsrods_diagram-draw.io.xml  pom.xml  start.sh
config/: exports
irods-vfs-impl/: Dockerfile  Dockerfile.packages  README.md  behavior_tests.bats  build_image.sh  build_jar  core.py  formatting_style.eclipse.xml  launch_container.sh  notes.txt  pom.xml  run_server  start.sh
irods-vfs-impl/config/: exports  log4j.properties  server.json
irods-vfs-impl/src/main/java/org/irods/jargon/nfs/vfs/: .IrodsVirtualFileSystem.java.swp  IRODSIdMap.java  IRODSProxyAdminAccountConfig.java  IRODSServerConfig.java  IRODSUser.java  IRODSVirtualFileSystem.java  IrodsIdMap.java  IrodsVirtualFileSystem.java  JSONUtils.java  NFSServerConfig.java  NfsMain.java  ServerConfig.java  ServerMain.java
irods-vfs-impl/src/main/java/org/irods/jargon/nfs/vfs/utils/: PermissionBitmaskUtils.java  VfsVersion.java
irods-vfs-impl/src/main/java/org/irods/nfsrods/config/: ConfigUtils.java  IRODSClientConfig.java  IRODSProxyAdminAccountConfig.java  IRODSServerConfig.java  IdMapConfigEntry.java  NFSServerConfig.java  ServerConfig.java
irods-vfs-impl/src/main/java/org/irods/nfsrods/misc/: VfsVersion.java  package-info.java
irods-vfs-impl/src/main/java/org/irods/nfsrods/utils/: JSONUtils.java
irods-vfs-impl/src/main/java/org/irods/nfsrods/vfs/: IRODSIdMap.java  IRODSIdMapper.java  IRODSUser.java  IRODSVirtualFileSystem.java  InodeToPathMapper.java  ObjectMap.java  PrivilegedSetAclNames.java  ReadWriteAclAllowlist.java  ReadWriteAclWhitelist.java  ServerMain.java  package-info.java
irods-vfs-impl/src/main/resources/: log4j.properties
irods-vfs-impl/src/test/java/org/irods/jargon/nfs/vfs/: IRODSVirtualFileSystemTest.java  IrodsVirtualFileSystemTest.java
irods-vfs-impl/src/test/java/org/irods/jargon/nfs/vfs/unittest/: AllTests.java  package-info.java
irods-vfs-impl/src/test/java/org/irods/nfsrods/vfs/: IRODSVirtualFileSystemTest.java
irods-vfs-impl/src/test/java/org/irods/nfsrods/vfs/unittest/: AllTests.java  package-info.java
irods-vfs-impl/testing/: behavior_tests.bats
irods-vfs-impl/testing/docker/: Dockerfile  build_image.sh  build_irods_packages.sh  start.sh
org.irods.jargon_irods-vfs-impl_jar_1.0.0-SNAPSHOT/: README.md  pom.xml
org.irods.jargon_irods-vfs-impl_jar_1.0.0-SNAPSHOT/src/main/java/org/irods/jargon/nfs/vfs/: IrodsVirtualFileSystem.java  main.java  package-info.java
org.irods.jargon_irods-vfs-impl_jar_1.0.0-SNAPSHOT/src/main/java/org/irods/jargon/nfs/vfs/utils/: PermissionBitmaskUtils.java  VfsVersion.java  package-info.java
org.irods.jargon_irods-vfs-impl_jar_1.0.0-SNAPSHOT/src/test/java/org/irods/jargon/nfs/vfs/: IrodsVirtualFileSystemTest.java
test/: README.md  irods_tests.bats
test/nfs_conformance/: Dockerfile  start.sh
testing/: Dockerfile  run_test.sh  test_nfsrods.bats
